fix spacing in link field layout

--- a/index.css
+++ b/index.css
@@ -1,1 +1,1 @@
-[data-v-04b62c8b] .k-field-header{display:none}
+[data-v-04b62c8b] .k-field-header{display:none}.k-link-field .k-grid[data-v-47df629b]{--grid-inline-gap: 1.5rem;--grid-block-gap: 1.5rem}
